fix amenities popover shift issue

--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -12,6 +12,8 @@
     border-radius: 4px;
 /*    padding: 10px;*/
     box-sizing: border-box;
+	display: flex;
+	flex-direction: row;
 }
 
 button {
